package ar.utn.ba.ddsi.models.entities.enumerados;

public enum EstadoSolicitud { PENDIENTE, RECHAZADA, ACEPTADA}
